--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -663,8 +663,9 @@ h6 {
     z-index: 99;
     padding: 10px 0;
     margin: 10px 20px;
+    border-radius: 4px;
     background-color: rgba (255, 255, 255, 0.9);
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
     transition: all 0.5s ease-in-out;
   }
 
