--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -372,7 +372,15 @@ h6 {
 
 .header .branding {
   min-height: 60px;
+  display:: flex;
+  justify-content: space-between;
   padding: 10px 0;
+}
+
+@media (max-width: 1199px) {
+  .header .branding {
+    display: block; /* Evita que o flexbox cause sobreposição em telas menores */
+  }
 }
 
 .header .logo {
@@ -400,6 +408,45 @@ h6 {
   visibility: hidden;
   overflow: hidden;
 }
+
+/**
+* Appointment Button
+*/
+.appointment-btn {
+  margin-left: 25px;
+  margin-right: 50px;
+  color: var(--contrast-color);
+  background: color-mix(in srgb, var(--accent-color), transparent 40%);
+  font-family: var(--heading-font);
+  font-weight: 300;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 8px 32px;
+  border-radius: 50px;
+  transition: 0.5s;
+  animation: fadeInUp 1s both 0.4s;
+  white-space: nowrap;
+  box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.6);
+}
+
+.appointment-btn:hover {
+  color: var(--contrast-color);
+  background: color-mix(in srgb, var(--accent-color), transparent 70%);
+  box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.2);
+}
+
+.appointment-btn i {
+  font-size: 20px;
+  color: color-mix(in srgb, var(--contrast-color), transparent 20%);
+}
+
+@media (max-width: 820px) {
+  .appointment-btn {
+    margin-right: 3em;
+  }
+}
+
 
 /*--------------------------------------------------------------
 # Navigation Menu
@@ -518,9 +565,12 @@ h6 {
     color: var(--nav-color);
     font-size: 28px;
     line-height: 0;
-    margin-right: 10px;
+    position: absolute;  /* Colocando o toggle em posição absoluta */
+    top: 5px;  /* Distância do topo */
+    right: 15px;  /* Distância da direita */
     cursor: pointer;
     transition: color 0.3s;
+    z-index: 9999;  /* Garantindo que o botão fique sobre outros elementos */
   }
 
   .navmenu {
@@ -607,7 +657,7 @@ h6 {
     padding: 10px 0;
     margin: 10px 20px;
     border-radius: 4px;
-    background-color: rgba (255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 0.9);
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
     transition: all 0.5s ease-in-out;
   }
@@ -630,7 +680,7 @@ h6 {
     position: absolute;
     font-size: 32px;
     top: 15px;
-    right: 15px;
+    right: 15px;  /* Certificando que fica no canto direito */
     margin-right: 0;
     z-index: 9999;
   }
@@ -647,6 +697,7 @@ h6 {
     display: block;
   }
 }
+
 
 /*--------------------------------------------------------------
 # Global Footer
@@ -697,7 +748,7 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: rgba(255, 255, 255, 0.8); /* Ícones com opacidade */
+  color: rgba(255, 255, 255, 0.7); /* Ícones com opacidade */
   line-height: 1;
   margin: 0 6px;
   border-radius: 40px;
