--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -800,7 +800,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background-color: var(--accent-color);
+  background-color: color-mix(in srgb, var(--accent-color), transparent 30%);
   width: 40px;
   height: 40px;
   border-radius: 40px;
@@ -817,7 +817,7 @@ h6 {
 }
 
 .scroll-top:hover {
-  background: color-mix(in srgb, var(--accent-color), transparent 30%);
+  background: color-mix(in srgb, var(--accent-color), transparent 70%);
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
 }
 
