--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1440,6 +1440,7 @@ ul {
     font-size: 14px;
     letter-spacing: 1px;
     display: inline-block;
+    border: 0;
     padding: 7px 28px;
     border-radius: 40px;
     transition: 0.5s;
@@ -1450,9 +1451,13 @@ ul {
   .saiba-mais:hover {
     color: var(--contrast-color);
     background: color-mix(in srgb, var(--accent-color), transparent 70%);
-    box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.2);
   }
 
+
+  .saiba-mais:focus {
+    border: none;
+    color: var(--contrast-color);
+  }
 
 .nav-link {
   display: flex;
@@ -1481,6 +1486,14 @@ ul {
   border: 0;
   border-left: 2px solid var(--accent-color); /* Removido borda clara */
   background-color: var(--surface-color); /* Fundo das abas */
+}
+
+.noncirurgicos .nav-link:hover {
+  border-left: 2px solid var(--accent-color); /* Removido borda clara */
+}
+
+.noncirurgicos .nav-link:focus {
+  border-left: 2px solid var(--accent-color); /* Removido borda clara */
 }
 
 .noncirurgicos .nav-link i {
