--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1423,13 +1423,6 @@ ul {
   }
 } */
 
-.faq-title {
-  font-size: 2.5rem;
-  font-weight: 300;
-  margin-bottom: 1rem;
-  color: var(--heading-color);
-}
-
 .faq-description {
   font-size: 1rem;
   color: var(--default-color);
@@ -1455,7 +1448,7 @@ ul {
 
 .faq-container .faq-item h3 {
   font-weight: 300;
-  font-size: 16px; /* Garantir o tamanho inicial */
+  font-size: 18px; /* Garantir o tamanho inicial */
   line-height: 24px;
   margin: 0 30px 0 0;
   transition: color 0.3s, transform 0.3s; /* Adicionar transição suave para propriedades animáveis */
@@ -1463,6 +1456,13 @@ ul {
   display: flex;
   align-items: center;
 }
+
+@media (max-width: 575px) {
+  .faq-container .faq-item h3 {
+    font-size: 17px; /* Garantir o tamanho inicial */
+  }
+}
+
 
 .faq-container .faq-item h3 .num {
   color: var(--accent-color);
@@ -1521,6 +1521,7 @@ ul {
   transform: rotate(90deg);
   color: var(--accent-color);
 }
+
 
 
 /*--------------------------------------------------------------
