--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1534,10 +1534,6 @@ ul {
   color: var(--default-color); /* Texto em cinza claro */
 }
 
-.icon-text {
-  display: inline-block; /* Isso faz com que o texto e o ícone fiquem lado a lado */
-}
-
 /* Estilo do ícone de seta */
 .noncirurgicos .animated-icon {
   font-size: 1.5rem;
@@ -1594,27 +1590,27 @@ ul {
   cursor: pointer;
   height: 100%;
   border: 0;
-  border-left: 2px solid var(--accent-color); /* Removido borda clara */
-  background-color: var(--surface-color); /* Fundo das abas */
+  border-bottom: 2px solid var(--contrast-color); /* Removido borda clara */
 }
 
 .noncirurgicos .nav-link:hover {
-  border-left: 2px solid var(--accent-color); /* Removido borda clara */
+  border-bottom: 2px solid var(--contrast-color); /* Removido borda clara */
 }
 
 .noncirurgicos .nav-link:focus {
-  border-left: 2px solid var(--accent-color); /* Removido borda clara */
+  border-bottom: 2px solid var(--contrast-color); /* Removido borda clara */
 }
 
 .noncirurgicos .nav-link i {
-  margin-top: 10px;
+  margin-top: 5px;
   font-size: 24px;
   color: var(--accent-color); /* Ícones dourados */
 }
 
 .noncirurgicos .nav-link h4 {
   font-size: 20px;
-  margin: 0;
+  margin-top: 10px;
+  padding: 10px;
   color: var(--default-color); /* Títulos nas abas em texto claro */
 }
 
