improve procedimentos non

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1592,15 +1592,15 @@ ul {
   height: 100%;
   border: 0;
   background: var(--surface-color);
-  border-left: 2px solid var(--contrast-color); /* Removido borda clara */
+  border-left: 2px solid var(--accent-color); /* Removido borda clara */
 }
 
 .noncirurgicos .nav-link:hover {
-  border-left: 2px solid var(--contrast-color); /* Removido borda clara */
+  border-left: 2px solid var(--accent-color); /* Removido borda clara */
 }
 
 .noncirurgicos .nav-link:focus {
-  border-left: 2px solid var(--contrast-color); /* Removido borda clara */
+  border-left: 2px solid var(--accent-color); /* Removido borda clara */
 }
 
 .noncirurgicos .nav-link i {
