--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -352,8 +352,18 @@ h6 {
 @media (max-width: 1199px) {
   .beside-toggle-btn {
     margin-right: 3.5rem;
-    /* Define o espaçamento */
-    /* Adicione outras personalizações, se necessário */
+    color: var(--contrast-color);
+    background: color-mix(in srgb, var(--accent-color), transparent 40%);
+    font-family: var(--heading-font);
+    font-weight: 300;
+    font-size: 15px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 6px 24px;
+    border-radius: 40px;
+    transition: 0.5s;
+    animation: fadeInUp 1s both 0.4s;
+    white-space: nowrap;
   }
 }
 
