--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,15 +35,15 @@
 
 :root {
   /* Paleta Global */
-  --background-color: #1a1a1a;
+  --background-color: #e0e0e0;
   /* Fundo escuro principal */
-  --default-color: #e0e0e0;
+  --default-color: #1a1a1a;
   /* Cinza claro para texto */
-  --heading-color: #f5f5f5;
+  --heading-color: #2a2a2a;
   /* Branco sutil para títulos */
   --accent-color: #b89e7a;
   /* Dourado sofisticado */
-  --surface-color: #2a2a2a;
+  --surface-color: #f5f5f5;
   /* Fundo dos cartões e elementos destacados */
   --contrast-color: #ffffff;
   /* Branco puro para texto em fundos escuros */
@@ -57,16 +57,16 @@
   /* Dourado ao interagir */
 
   /* Navegação */
-  --nav-color: #e0e0e0;
+  --nav-color: #555555;
   /* Texto claro no menu */
   --nav-hover-color: #b89e7a;
   /* Dourado no hover */
-  --nav-mobile-background-color: #1a1a1a;
+  --nav-mobile-background-color: #e0e0e0;
   /* Fundo do menu mobile */
-  --nav-dropdown-background-color: rgba(26,
-      26,
-      26,
-      1);
+  --nav-dropdown-background-color: rgba(224,
+      224,
+      224,
+      0.92);
   /* Fundo semitransparente para dropdown */
   --nav-dropdown-color: #e0e0e0;
   /* Texto claro no dropdown */
@@ -78,7 +78,6 @@
 body {
   background-color: var(--background-color);
   color: var(--default-color);
-  font-family: "Arial", sans-serif;
   line-height: 1.6;
 }
 
@@ -435,7 +434,7 @@ h6 {
     transition: 0.3s;
     border-radius: 4px;
     z-index: 99;
-    box-shadow: 0px 0px 40px rgba(0, 0, 0, 1);
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.1);
   }
 
   .navmenu .dropdown ul li {
@@ -446,7 +445,6 @@ h6 {
     padding: 10px 20px;
     font-size: 16px;
     text-transform: none;
-    color: var(--nav-dropdown-color);
   }
 
   .navmenu .dropdown ul a i {
@@ -482,7 +480,7 @@ h6 {
 /* Navmenu - Mobile */
 @media (max-width: 1199px) {
   .mobile-nav-toggle {
-    color: var(--nav-color);
+    color: var(--default-color);
     font-size: 28px;
     line-height: 0;
     position: absolute;
@@ -509,8 +507,8 @@ h6 {
     inset: 60px 20px 20px 20px;
     padding: 10px 0;
     margin: 0;
-    background-color: color-mix(var(--nav-dropdown-background-color), transparent 0.5%);
-    border: 1px solid rgba(255, 255, 255, 0.04);
+    background-color: color-mix(in srgb, var(--nav-mobile-background-color), transparent 20%);
+    border: 1px solid rgba(224, 224, 224, 0.04);
     /* Borda sutil */
     overflow-y: auto;
     transition: 0.3s;
@@ -525,7 +523,7 @@ h6 {
 
   .navmenu a,
   .navmenu a:focus {
-    color: var(--nav-dropdown-color);
+    color: var(--gray-tone);
     padding: 10px 20px;
     font-family: var(--nav-font);
     font-size: 17px;
@@ -582,18 +580,18 @@ h6 {
     padding: 10px 0;
     margin: 10px 20px;
     border-radius: 4px;
-    background-color: rgba(255, 255, 255, 0.9);
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
+    background-color: rgba(224, 224, 224, 1);
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
     transition: all 0.5s ease-in-out;
   }
 
   .navmenu .dropdown ul ul {
-    background-color: rgba(33, 37, 41, 0.1);
+    background-color: rgba(224, 224, 224, 0.1);
   }
 
   .navmenu .dropdown>.dropdown-active {
     display: block;
-    background-color: rgba(33, 37, 41, 0.03);
+    background-color: rgba(224, 224, 224, 0.03);
   }
 
   .mobile-nav-active {
@@ -601,7 +599,7 @@ h6 {
   }
 
   .mobile-nav-active .mobile-nav-toggle {
-    color: #fff;
+    color: rgba(5, 5, 5, 0.4);
     position: absolute;
     font-size: 32px;
     top: 15px;
@@ -630,15 +628,13 @@ h6 {
 --------------------------------------------------------------*/
 .footer {
   color: var(--contrast-color);
-  background-color: #1a1a1a;
+  background-color: rgba(255, 255, 255, 0.5);
   text-align: center;
   padding: 40px 0;
   position: relative;
-  box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 -3px 10px rgba(0, 0, 0, 0.1);
   /* Sombra para transição */
 }
-
-
 
 .footer h1 {
   font-size: 1.5em;
@@ -648,8 +644,12 @@ h6 {
   animation: fadeInDown 1s both;
   font-family: "Wild and Folk Regular", sans-serif;
   letter-spacing: 4px;
-  color: #bbbbbb;
-  /* Dourado sofisticado */
+  color: #b1b1b1;
+}
+
+.footer .subtitulo {
+  color: #a7a7a7;
+
 }
 
 .footer h3 {
@@ -666,8 +666,6 @@ h6 {
   font-style: italic;
   padding: 0;
   margin: 0 0 30px 0;
-  color: rgba(255, 255, 255, 0.8);
-  /* Texto em branco com opacidade */
 }
 
 .footer .social-links {
@@ -679,7 +677,7 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: rgba(255, 255, 255, 0.7);
+  color: var(--accent-color);
   /* Ícones com opacidade */
   line-height: 1;
   margin: 0 6px;
@@ -690,32 +688,32 @@ h6 {
   transition: all 0.3s ease;
   text-decoration: none;
   background-color: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.4);
+  border: 1px dotted var(--accent-color);
   /* Borda clara */
 }
 
 .footer .social-links a:hover {
   color: var(--accent-color);
   /* Dourado no hover */
-  border-color: var(--accent-color);
+  border-color: rgba(255, 255, 255, 0.1);
   /* Destaque no hover */
   background-color: rgba(255, 255, 255, 0.1);
-  /* Fundo claro sutil */
+  border: 1px solid var(--accent-color);
 }
 
 .footer .copyright {
   font-size: 13px;
   padding-top: 25px;
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  border-top: 1px solid rgba(5, 5, 5, 0.07);
   /* Linha sutil */
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(5, 5, 5, 0.5);
   /* Texto claro */
 }
 
 .footer .credits {
   font-size: 13px;
   padding-top: 5px;
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(5, 5, 5, 0.5);
   /* Texto com opacidade */
 }
 
@@ -985,7 +983,7 @@ section,
 /* Remover o uso duplicado de ::before */
 .hero .carousel-item::before {
   content: "";
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.5);
   position: absolute;
   inset: 0;
   z-index: 2;
@@ -1271,7 +1269,7 @@ section,
   margin: 24px 0;
   border-radius: 4px;
   /* Bordas arredondadas */
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
   /* Sombra leve */
   font-size: 1.1em;
   /* Aumentar levemente o texto */
@@ -1377,7 +1375,7 @@ ul {
   padding: 80px 0;
   position: relative;
   clip-path: inset(0);
-  background-color: #2a2a2a;
+  background-color: rgba(245, 245, 245, 0.8);
   /* Fundo escuro */
 }
 
@@ -1390,13 +1388,11 @@ ul {
   font-size: 28px;
   font-weight: 300;
   /* Ajustado para um peso ligeiramente mais elegante */
-  color: var(--contrast-color);
   /* Branco puro */
   margin-bottom: 20px;
 }
 
 .clinica p {
-  color: #e0e0e0;
   /* Cinza claro para texto */
   line-height: 1.6;
   /* Melhor espaçamento para leitura */
@@ -1621,7 +1617,6 @@ ul {
 /* Estilo do ícone de seta */
 .noncirurgicos .animated-icon {
   font-size: 0.8rem;
-  color: #007bff;
   transition: transform 0.3s ease;
 }
 
@@ -1683,7 +1678,7 @@ ul {
   height: 100%;
   border: 0;
   background: var(--surface-color);
-  border-left: 2px solid var(--accent-color);
+  border-left: 3px solid var(--accent-color);
   white-space: nowrap;
   /* Garante uma única linha */
   flex-wrap: nowrap;
@@ -1776,33 +1771,27 @@ ul {
 }
 
 .noncirurgicos .modal-header {
-  border-bottom: 1px solid var(--border-color);
+  border-bottom: 1px solid color-mix(in srgb, var(--border-color), transparent 50%);
   margin: 0 15px;
+  color: var(--default-color);
 }
 
 .noncirurgicos .modal-title {
-  color: var(--contrast-color);
   font-size: 18px;
   /* Títulos do modal em branco puro */
 }
 
 .noncirurgicos .modal-body h5 {
-  color: var(--contrast-color);
   font-size: 16px;
   /* Títulos do modal em branco puro */
 }
 
-.noncirurgicos .btn-close-white {
-  color: var(--contrast-color);
+.btn-close-accent {
+  color: var(--accent-color);
   /* Ícone de fechar em texto claro */
 }
 
-.noncirurgicos .btn-close-white:hover {
-  color: var(--default-color);
-  /* Ícone de fechar em texto claro */
-}
-
-.btn-close-white:focus {
+.btn-close-accent:focus {
   outline: none;
   box-shadow: none;
 }
@@ -1847,7 +1836,7 @@ ul {
 --------------------------------------------------------------*/
 .endereco .info-item {
   background-color: var(--surface-color);
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.7);
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   padding: 24px 0 30px 0;
 }
 
@@ -1879,7 +1868,7 @@ ul {
 
 .endereco .php-email-form {
   background-color: var(--surface-color);
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.7);
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
   height: 100%;
   padding: 30px;
 }
@@ -1932,7 +1921,7 @@ ul {
 --------------------------------------------------------------*/
 .contatos .info-item {
   background-color: var(--surface-color);
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   padding: 24px 10px 30px 10px;
 }
 
