--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -326,7 +326,7 @@ h6 {
 */
 .appointment-btn {
   color: var(--contrast-color);
-  background: color-mix(in srgb, var(--accent-color), transparent 40%);
+  background: color-mix(in srgb, var(--accent-color), transparent 5%);
   font-family: var(--heading-font);
   font-weight: 300;
   font-size: 15px;
@@ -341,7 +341,7 @@ h6 {
 
 .appointment-btn:hover {
   color: var(--contrast-color);
-  background: color-mix(in srgb, var(--accent-color), transparent 70%);
+  background: color-mix(in srgb, var(--accent-color), transparent 50%);
   box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.2);
 }
 
@@ -646,11 +646,11 @@ h6 {
   animation: fadeInDown 1s both;
   font-family: "Wild and Folk Regular", sans-serif;
   letter-spacing: 4px;
-  color: #b1b1b1;
+  color: #afafaf;
 }
 
 .footer .subtitulo {
-  color: #a7a7a7;
+  color: #9c9c9c;
 
 }
 
@@ -706,16 +706,16 @@ h6 {
 .footer .copyright {
   font-size: 13px;
   padding-top: 25px;
-  border-top: 1px solid rgba(5, 5, 5, 0.07);
+  border-top: 1px solid rgba(5, 5, 5, 0.09);
   /* Linha sutil */
-  color: rgba(5, 5, 5, 0.5);
+  color: rgba(5, 5, 5, 0.6);
   /* Texto claro */
 }
 
 .footer .credits {
   font-size: 13px;
   padding-top: 5px;
-  color: rgba(5, 5, 5, 0.5);
+  color: rgba(5, 5, 5, 0.6);
   /* Texto com opacidade */
 }
 
@@ -764,7 +764,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background-color: color-mix(in srgb, var(--accent-color), transparent 30%);
+  background-color: color-mix(in srgb, var(--accent-color), transparent 10%);
   width: 40px;
   height: 40px;
   border-radius: 40px;
@@ -782,7 +782,7 @@ h6 {
 }
 
 .scroll-top:hover {
-  background: color-mix(in srgb, var(--accent-color), transparent 70%);
+  background: color-mix(in srgb, var(--accent-color), transparent 50%);
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
 }
 
@@ -1072,12 +1072,12 @@ section,
 
 .hero .btn-get-started i {
   font-size: 20px;
-  color: color-mix(in srgb, var(--contrast-color), transparent 20%);
+  color: color-mix(in srgb, var(--contrast-color), transparent 5%);
 }
 
 
 .hero .btn-get-started:hover {
-  background: color-mix(in srgb, var(--accent-color), transparent 70%);
+  background: color-mix(in srgb, var(--accent-color), transparent 50%);
 }
 
 .hero .carousel-control-prev,
@@ -1407,7 +1407,7 @@ ul {
 
 .clinica .cta-btn {
   color: var(--contrast-color);
-  background: color-mix(in srgb, var(--accent-color), transparent 40%);
+  background: color-mix(in srgb, var(--accent-color), transparent 5%);
   font-family: var(--heading-font);
   font-weight: 300;
   font-size: 16px;
@@ -1421,7 +1421,7 @@ ul {
 }
 
 .clinica .cta-btn:hover {
-  background: color-mix(in srgb, var(--accent-color), transparent 70%);
+  background: color-mix(in srgb, var(--accent-color), transparent 50%);
 }
 
 /*--------------------------------------------------------------
